fix gap between items in landing page

--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,6 @@
   background-color: rgba(0, 0, 0, 0.4);
 }
 
+html{
+  scroll-behavior: smooth;
+}
